fix: ajustes en las cards para que no se genere overflow

--- a/alura-cinema/src/components/Card/Card.module.css
+++ b/alura-cinema/src/components/Card/Card.module.css
@@ -1,28 +1,33 @@
 .container {
-    padding: 0 0 1em 0;
-    margin-top: .5em;
-    width: 282px;
-    background-color: var(--gris);
-    display: flex;
-    flex-direction: column;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, .25);
+  padding: 0 0 1em 0;
+  margin-top: 0.5em;
+  width: 282px;
+  background-color: var(--gris);
+  display: flex;
+  flex-direction: column;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .capa {
-    width: 100%;
+  width: 100%;
 }
 
-.container h2, .favorito {
-    padding: 0 1em;
+.cardBody {
+  padding: 0 1em;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .favorito {
-    margin-left: 10px;
-    width: 25px;
+  width: 25px;
+  cursor: pointer;
 }
 
 .link {
-    text-decoration: none;
-    color: inherit;
-    text-align: left;
+  text-decoration: none;
+  color: inherit;
+  text-align: left;
 }
